[package]
name = "word_iter"
version = "0.1.0"
authors = ["Nils Martel <nils.martel@graphmasters.net>"]
edition = "2018"
repository = "https://github.com/nilsmartel/words"
description = "Simple Iterator over all words in a string"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.2"                # A byte-oriented, zero-copy, parser combinators library
